---
source: crates/tests/databases-tests/src/postgres/mutation_tests.rs
expression: result
---
{
  "operation_results": [
    {
      "affected_rows": 1,
      "returning": [
        {
          "__value": [
            {
              "artist_id": 276,
              "name": "Olympians"
            }
          ]
        }
      ]
    },
    {
      "affected_rows": 1,
      "returning": [
        {
          "__value": [
            {
              "album_id": 348,
              "title": "Lake Mannion",
              "artist": {
                "rows": [
                  {
                    "name": "Olympians"
                  }
                ]
              }
            }
          ]
        }
      ]
    }
  ]
}
